--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "mongoose": "^6.4.4",
     "nodemailer": "^6.7.7",
+    "nodemailer-express-handlebars": "^5.0.0",
     "puppeteer": "^15.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
